tools/tests/ui/fail/l1005.cnf
// Test file for error code: L1005
// Expected error: Invalid Illegal character in type annotation -- expected valid UTF-8 encoding
// Category: Syntax
// Layer: 1 (Lexer)

IDENTIFICATION DIVISION.
    PROGRAM "test-invalid".
EVIRONMENT DIVISION.
    OS "invalid™utf8-chars".
